# MCP_NN_tool

./: .gitignore  CLASSIFICATION_ENHANCEMENT_SUMMARY.md  CLAUDE.md  LOSS_FUNCTION_ENHANCEMENT.md  MCP_Server_Usage.md  README.md  hybrid_server.py  lgm_4_transformed.csv  main.py  pyproject.toml  run_mcp_server.py  run_server.py  simple_debug_test.py  simple_mcp_server.py  single_port_server.py  test_mcp_server_env.py  test_mcp_url_endpoint.py  test_url_training.py  第1次已知点_transformed.csv
debug_models/: models_index.json
debug_models/f7363369-5eba-4026-9634-34b341493a9a/: academic_report.md  best_params.json  cv_predictions.csv  cv_predictions_original.csv  cv_predictions_scaled.csv  hyperparameter_optimization_trials.csv  model_metadata.json  model_states.pth  nn_training_report_f7363369-5eba-4026-9634-34b341493a9a_20250918_005841.html  training_history.csv
debug_task_queue/: models_index.json  task_queue.json
debug_task_queue/545d7f44-65b9-4efa-8568-dcdf7be93078/: academic_report.md  best_params.json  cv_predictions.csv  cv_predictions_original.csv  (+6 more)
reports/: nn_prediction_report_d1fddb0b-b5ed-4303-8c76-484e11c277a4_20251027_171002.html  nn_prediction_report_d1fddb0b-b5ed-4303-8c76-484e11c277a4_20251027_190150.html  nn_prediction_report_d3d7d308-c8e4-4efd-8ce8-4ca4123c5582_20251027_212529.html
test_data/: animals_string_labels.csv  classes_numeric_labels.csv  fruit_labels.csv  sentiment_binary_labels.csv
test_models_queue/: models_index.json  task_queue.json
test_trained_models/: models_index.json
trained_model/: models_index.json  task_queue.json
(+198 files in other folders)
