[project]
name = "mcp-nn-tool"
version = "0.1.0"
description = "MCP Server for Neural Network Training and Prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "optuna>=4.3.0",
    "openpyxl>=3.1.0", # For Excel file support
    "mcp>=1.0.0", # MCP framework with FastMCP support
    "xlrd>=2.0.1",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
gp = [
    "scikit-optimize>=0.9.0",  # For Gaussian Process optimization
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-nn-server = "mcp_nn_tool.__main__:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
